--- a/ClusterSurveillance/MainWindow.xaml
+++ b/ClusterSurveillance/MainWindow.xaml
@@ -132,16 +132,36 @@
                     <TextBlock Text="Pâtisserie" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontFamily="Poppins Medium" Foreground="White"/>
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Orientation="Horizontal">
-                    <RadioButton Height="35" MinWidth="35" Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding OptionViewCommand}" Foreground="White" IsChecked="{Binding Path=OptionsIsChecked}">
-                        <Path
-			                Width="35"
-			                Height="35"
-			                Data="M 18,11 27,20 M 18,20 27,11"
-			                Stroke="{Binding Path=Foreground,
-							 RelativeSource={RelativeSource AncestorType={x:Type RadioButton}}}"
-			                StrokeThickness="1" />
+                    <RadioButton Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding OptionViewCommand}" IsChecked="{Binding OptionsIsChecked}" Width="35" Height="35" Cursor="Hand">
+                        <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type RadioButton}}}" VerticalAlignment="Center" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+                            <Path.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform X="-1" Y="-1"/>
+                                </TransformGroup>
+                            </Path.RenderTransform>
+                            <Path.Data>
+                                <PathGeometry Figures="M19.9 12.66a1 1 0 0 1 0-1.32L21.18 9.9a1 1 0 0 0 .12-1.17l-2-3.46a1 1 0 0 0-1.07-.48l-1.88.38a1 1 0 0 1-1.15-.66l-.61-1.83A1 1 0 0 0 13.64 2h-4a1 1 0 0 0-1 .68L8.08 4.51a1 1 0 0 1-1.15.66L5 4.79A1 1 0 0 0 4 5.27L2 8.73A1 1 0 0 0 2.1 9.9l1.27 1.44a1 1 0 0 1 0 1.32L2.1 14.1A1 1 0 0 0 2 15.27l2 3.46a1 1 0 0 0 1.07.48l1.88-.38a1 1 0 0 1 1.15.66l.61 1.83a1 1 0 0 0 1 .68h4a1 1 0 0 0 .95-.68l.61-1.83a1 1 0 0 1 1.15-.66l1.88.38a1 1 0 0 0 1.07-.48l2-3.46a1 1 0 0 0-.12-1.17ZM18.41 14l.8.9-1.28 2.22-1.18-.24a3 3 0 0 0-3.45 2L12.92 20H10.36L10 18.86a3 3 0 0 0-3.45-2l-1.18.24L4.07 14.89l.8-.9a3 3 0 0 0 0-4l-.8-.9L5.35 6.89l1.18.24a3 3 0 0 0 3.45-2L10.36 4h2.56l.38 1.14a3 3 0 0 0 3.45 2l1.18-.24 1.28 2.22-.8.9A3 3 0 0 0 18.41 14ZM11.64 8a4 4 0 1 0 4 4A4 4 0 0 0 11.64 8Zm0 6a2 2 0 1 1 2-2A2 2 0 0 1 11.64 14Z" FillRule="NonZero"/>
+                            </Path.Data>
+                        </Path>
                     </RadioButton>
-                    <RadioButton Height="35" MinWidth="35" Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding TroubleshootViewCommand}" IsChecked="{Binding TroubleshootIsChecked}"/>
+                    <RadioButton  Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding TroubleshootViewCommand}" IsChecked="{Binding TroubleshootIsChecked}" Width="35" Height="35" Cursor="Hand">
+                        <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type RadioButton}}}" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <Path.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform X="-1" Y="-1"/>
+                                </TransformGroup>
+                            </Path.RenderTransform>
+                            <Path.Data>
+                                <PathGeometry Figures="M19 14h2a1 1 0 0 0 0-2H19V11a5.15 5.15 0 0 0-.21-1.36A5 5 0 0 0 22 5a1 1 0 0 0-2 0 3 3 0 0 1-2.14 2.87A5 5 0 0 0 16 6.4 2.58 2.58 0 0 0 16 6 4 4 0 0 0 8 6a2.58 2.58 0 0 0 0 .4 5 5 0 0 0-1.9 1.47A3 3 0 0 1 4 5 1 1 0 0 0 2 5 5 5 0 0 0 5.21 9.64 5.15 5.15 0 0 0 5 11v1H3a1 1 0 0 0 0 2H5v1a7 7 0 0 0 .14 1.38A5 5 0 0 0 2 21a1 1 0 0 0 2 0 3 3 0 0 1 1.81-2.74 7 7 0 0 0 12.38 0A3 3 0 0 1 20 21a1 1 0 0 0 2 0 5 5 0 0 0-3.14-4.62A7 7 0 0 0 19 15Zm-8 5.9A5 5 0 0 1 7 15V11a3 3 0 0 1 3-3h1ZM10 6a2 2 0 0 1 4 0Zm7 9a5 5 0 0 1-4 4.9V8h1a3 3 0 0 1 3 3Z" FillRule="NonZero"/>
+                            </Path.Data>
+                        </Path>
+                    </RadioButton>
                 </StackPanel>
                 <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
                     <Button
@@ -183,8 +203,8 @@
                 <RadioButton Content="Logging" Height="50" Foreground="White" FontSize="14" Style="{StaticResource MenuButtonTheme}" Command="{Binding LoggingViewCommand}"/>
             </StackPanel>
         </Grid>
-        
-        
+
+
         <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding CurrentView}"/>
         <ContentControl Grid.Row="1" Grid.ColumnSpan="2" Content="{Binding OptionView}"/>
 
