--- a/ClusterSurveillance/Theme/MenuButtonTheme.xaml
+++ b/ClusterSurveillance/Theme/MenuButtonTheme.xaml
@@ -7,7 +7,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="RadioButton">
                         <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="Transparent">
-                            <TextBlock Name="ButtonText" Text="{TemplateBinding Property=Content}" VerticalAlignment="Center" Margin="50,0,0,0">
+                            <TextBlock Name="ButtonText" Text="{TemplateBinding Property=Content}" VerticalAlignment="Center" Margin="50,0,0,0" FontFamily="Poppins">
                                 <TextBlock.Foreground>
                                     <SolidColorBrush x:Name="ForegroundColor" Color="#48FFFFFF"/>
                                 </TextBlock.Foreground>
