--- a/ClusterSurveillance/App.xaml
+++ b/ClusterSurveillance/App.xaml
@@ -26,6 +26,9 @@
             <DataTemplate DataType="{x:Type viewModel:LoggingViewModel}">
                 <view:LoggingView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:ClientViewModel}">
+                <view:ClientView/>
+            </DataTemplate>
 
             <DataTemplate DataType="{x:Type viewModelSettings:GeneralViewModel}">
                 <viewSettings:General/>
