--- a/ClusterSurveillance/MainWindow.xaml
+++ b/ClusterSurveillance/MainWindow.xaml
@@ -15,6 +15,7 @@
         WindowStartupLocation="CenterScreen" 
         WindowStyle="None"
         Margin="6,6,5,0" Icon="/PatiserieIcon.png"
+        Background="#F1F3F5"
         >
     <Window.DataContext>
         <viewModel:MainViewModel/>
@@ -24,80 +25,40 @@
     </WindowChrome.WindowChrome>
     <Window.Resources>
         <SolidColorBrush x:Key="ClientClosed" Color="#FF9BAAB5" />
-        <SolidColorBrush x:Key="ClientConnecting" Color="#FFF7E519" />
-        <SolidColorBrush x:Key="ClientOpen" Color="#FF2FFFA4" />
+        <SolidColorBrush x:Key="ClientConnecting" Color="#FFD43B" />
+        <SolidColorBrush x:Key="ClientOpen" Color="#69DB7C" />
 
         <Style x:Key="TitleBarButtonStyle" TargetType="Button">
-            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Cursor" Value="Hand"/>
             <Setter Property="Padding" Value="0" />
             <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
             <Setter Property="IsTabStop" Value="False" />
             <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Margin" Value="3"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border
 					x:Name="border"
-					Background="Transparent"
+					Background="{TemplateBinding Background}"
 					BorderThickness="0"
-					SnapsToDevicePixels="true">
-                            <ContentPresenter
-						x:Name="contentPresenter"
-						Margin="0"
-						HorizontalAlignment="Center"
-						VerticalAlignment="Center"
-						Focusable="False"
-						RecognizesAccessKey="True" />
+					SnapsToDevicePixels="true"
+                            Width="12"
+                            Height="12"
+                            CornerRadius="6">
                         </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter TargetName="border" Property="Background" Value="#12FFFFFF" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="TitleBarCloseButtonStyle" TargetType="Button">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-            <Setter Property="Padding" Value="0" />
-            <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
-            <Setter Property="IsTabStop" Value="False" />
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border
-					x:Name="border"
-					Background="Transparent"
-					BorderThickness="0"
-					SnapsToDevicePixels="true">
-                            <ContentPresenter
-						x:Name="contentPresenter"
-						Margin="0"
-						HorizontalAlignment="Center"
-						VerticalAlignment="Center"
-						Focusable="False"
-						RecognizesAccessKey="True" />
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter TargetName="border" Property="Background" Value="#CCFF3030" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
     </Window.Resources>
 
-    <Grid Background="#272537">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="230"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="55"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <tb:TaskbarIcon
@@ -125,96 +86,40 @@
                 </ContextMenu>
             </tb:TaskbarIcon.ContextMenu>
         </tb:TaskbarIcon>
-        <Border Background="#FF343148" Grid.ColumnSpan="2" Grid.Row="0" BorderBrush="#775A5961" BorderThickness="0,0,0,1">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="250"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="150"/>
-                </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
-                    <svg:SVGImage Source="ClusterSurveillance;component/Images/eclair.svg" Margin="20,0,10,0" HorizontalAlignment="Left" Height="22" Width="22"/>
-                    <TextBlock Text="Pâtisserie" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontFamily="Poppins Medium" Foreground="White"/>
-                </StackPanel>
-                <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Orientation="Horizontal">
-                    <RadioButton Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding OptionViewCommand}" IsChecked="{Binding OptionsIsChecked}" Width="35" Height="35" Cursor="Hand">
-                        <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type RadioButton}}}" VerticalAlignment="Center" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.5">
-                            <Path.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform/>
-                                    <SkewTransform/>
-                                    <RotateTransform/>
-                                    <TranslateTransform X="-1" Y="-1"/>
-                                </TransformGroup>
-                            </Path.RenderTransform>
-                            <Path.Data>
-                                <PathGeometry Figures="M19.9 12.66a1 1 0 0 1 0-1.32L21.18 9.9a1 1 0 0 0 .12-1.17l-2-3.46a1 1 0 0 0-1.07-.48l-1.88.38a1 1 0 0 1-1.15-.66l-.61-1.83A1 1 0 0 0 13.64 2h-4a1 1 0 0 0-1 .68L8.08 4.51a1 1 0 0 1-1.15.66L5 4.79A1 1 0 0 0 4 5.27L2 8.73A1 1 0 0 0 2.1 9.9l1.27 1.44a1 1 0 0 1 0 1.32L2.1 14.1A1 1 0 0 0 2 15.27l2 3.46a1 1 0 0 0 1.07.48l1.88-.38a1 1 0 0 1 1.15.66l.61 1.83a1 1 0 0 0 1 .68h4a1 1 0 0 0 .95-.68l.61-1.83a1 1 0 0 1 1.15-.66l1.88.38a1 1 0 0 0 1.07-.48l2-3.46a1 1 0 0 0-.12-1.17ZM18.41 14l.8.9-1.28 2.22-1.18-.24a3 3 0 0 0-3.45 2L12.92 20H10.36L10 18.86a3 3 0 0 0-3.45-2l-1.18.24L4.07 14.89l.8-.9a3 3 0 0 0 0-4l-.8-.9L5.35 6.89l1.18.24a3 3 0 0 0 3.45-2L10.36 4h2.56l.38 1.14a3 3 0 0 0 3.45 2l1.18-.24 1.28 2.22-.8.9A3 3 0 0 0 18.41 14ZM11.64 8a4 4 0 1 0 4 4A4 4 0 0 0 11.64 8Zm0 6a2 2 0 1 1 2-2A2 2 0 0 1 11.64 14Z" FillRule="NonZero"/>
-                            </Path.Data>
-                        </Path>
-                    </RadioButton>
-                    <RadioButton  Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding TroubleshootViewCommand}" IsChecked="{Binding TroubleshootIsChecked}" Width="35" Height="35" Cursor="Hand">
-                        <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type RadioButton}}}" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Path.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform/>
-                                    <SkewTransform/>
-                                    <RotateTransform/>
-                                    <TranslateTransform X="-1" Y="-1"/>
-                                </TransformGroup>
-                            </Path.RenderTransform>
-                            <Path.Data>
-                                <PathGeometry Figures="M19 14h2a1 1 0 0 0 0-2H19V11a5.15 5.15 0 0 0-.21-1.36A5 5 0 0 0 22 5a1 1 0 0 0-2 0 3 3 0 0 1-2.14 2.87A5 5 0 0 0 16 6.4 2.58 2.58 0 0 0 16 6 4 4 0 0 0 8 6a2.58 2.58 0 0 0 0 .4 5 5 0 0 0-1.9 1.47A3 3 0 0 1 4 5 1 1 0 0 0 2 5 5 5 0 0 0 5.21 9.64 5.15 5.15 0 0 0 5 11v1H3a1 1 0 0 0 0 2H5v1a7 7 0 0 0 .14 1.38A5 5 0 0 0 2 21a1 1 0 0 0 2 0 3 3 0 0 1 1.81-2.74 7 7 0 0 0 12.38 0A3 3 0 0 1 20 21a1 1 0 0 0 2 0 5 5 0 0 0-3.14-4.62A7 7 0 0 0 19 15Zm-8 5.9A5 5 0 0 1 7 15V11a3 3 0 0 1 3-3h1ZM10 6a2 2 0 0 1 4 0Zm7 9a5 5 0 0 1-4 4.9V8h1a3 3 0 0 1 3 3Z" FillRule="NonZero"/>
-                            </Path.Data>
-                        </Path>
-                    </RadioButton>
-                </StackPanel>
-                <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
-                    <Button
-		                Click="Minimize"
-		                RenderOptions.EdgeMode="Aliased"
-		                Style="{StaticResource TitleBarButtonStyle}">
-                        <Path
-			                Width="46"
-			                Height="32"
-			                Data="M 18,15 H 28"
-			                Stroke="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
-			                StrokeThickness="1" />
-                    </Button>
-                    <Button Name="maximizeButton" Click="Maximize" Style="{StaticResource TitleBarButtonStyle}">
-                        <Path   Width="46"
-			                    Height="32"
-			                    Data="M 18.5,10.5 H 27.5 V 19.5 H 18.5 Z"
-			                    Stroke="{Binding Path=Foreground,
-							    RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
-			                    StrokeThickness="1" />
-                    </Button>
-                    <Button
-		                Click="Exit"
-		                Style="{StaticResource TitleBarCloseButtonStyle}">
-                        <Path
-			                Width="46"
-			                Height="32"
-			                Data="M 18,11 27,20 M 18,20 27,11"
-			                Stroke="{Binding Path=Foreground,
-							 RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
-			                StrokeThickness="1" />
-                    </Button>
-                </StackPanel>
-            </Grid>
-        </Border>
-        <Grid Background="#FF211F2F" Grid.Column="0" Grid.Row="1">
-            <StackPanel Grid.Row="0" Orientation="Vertical" VerticalAlignment="Top" >
-                <RadioButton Content="Clients" Height="50" Foreground="White" FontSize="14" Style="{StaticResource MenuButtonTheme}" Command="{Binding ServerViewCommand}" IsChecked="True"/>
-                <RadioButton Content="Logging" Height="50" Foreground="White" FontSize="14" Style="{StaticResource MenuButtonTheme}" Command="{Binding LoggingViewCommand}"/>
+        <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
+            <StackPanel Grid.Row="0" Orientation="Vertical" VerticalAlignment="Top" Margin="0,115,0,0">
+                <RadioButton Content="Dashboard" Foreground="White" FontSize="14" Style="{StaticResource MenuButtonTheme}" Command="{Binding ServerViewCommand}" IsChecked="True"/>
+                <RadioButton Content="Server" Foreground="White" FontSize="14" Style="{StaticResource MenuButtonTheme}"/>
+                <RadioButton Content="Logging" Foreground="White" FontSize="14" Style="{StaticResource MenuButtonTheme}" Command="{Binding LoggingViewCommand}"/>
             </StackPanel>
-        </Grid>
+        </Border>
+
+        <Border Height="50" Grid.ColumnSpan="2" VerticalAlignment="Top">
+            <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0">
+                <Button
+		                Click="Exit"
+		                Style="{StaticResource TitleBarButtonStyle}"
+                    Background="#FA5252">
+                </Button>
+                <Button Name="maximizeButton" 
+                        Click="Minimize" 
+                        Style="{StaticResource TitleBarButtonStyle}"
+                        Background="#FFD43B">
+                </Button>
+                <Button
+		                Click="Maximize"
+		                Style="{StaticResource TitleBarButtonStyle}"
+                    Background="#69DB7C">>
+                </Button>
+            </StackPanel>
+        </Border>
 
 
         <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding CurrentView}"/>
         <ContentControl Grid.Row="1" Grid.ColumnSpan="2" Content="{Binding OptionView}"/>
 
 
-        <Border Name="StatusMessage" MaxWidth="200" Background="#FF706B86" Grid.Row="1" CornerRadius="5" VerticalAlignment="Bottom" HorizontalAlignment="Center" RenderTransformOrigin="0.5,1" Opacity="0" Margin="0,0,0,35">
+        <Border Name="StatusMessage" MaxWidth="200" Background="#212529" Grid.Row="1" CornerRadius="5" VerticalAlignment="Bottom" HorizontalAlignment="Center" RenderTransformOrigin="0.5,1" Opacity="0" Margin="0,0,0,35">
             <Border.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="0.5" ScaleX="0.5" x:Name="StatusMessageScaleTransform"/>
